Controllerの追加とuserModelの修正

--- a/login/views/index.ejs
+++ b/login/views/index.ejs
@@ -1,3 +1,9 @@
-<div class="message-body">
-    <p>You are logged in!</p>
-</div>
+<form class="message is-light">
+    <div class="message-header">
+        <p>Dashboard</p>
+    </div>
+    <div class="message-body">
+        <p>You are logged in!</p>
+    </div>
+</form>
+
