--- a/login/views/layout.ejs
+++ b/login/views/layout.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title>title</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.8.0/css/bulma.min.css">
   </head>
   <body>
@@ -20,12 +20,7 @@
       </nav>
     </header>
     <main>
-      <form class="message is-light">
-        <div class="message-header">
-          <p><%= title %></p>
-        </div>
-        <%- body %>
-      </form>
+      <%- body %>
     </main>
   </body>
 </html>
