--- a/login/views/signUp.ejs
+++ b/login/views/signUp.ejs
@@ -1,12 +1,17 @@
-<div class="message-body">
-  <!-- <form action="/add" method="POST"> -->
-  <label class="label">Name</label>
-  <input class="input" type="text" name="username"/><br>
-  <label class="label">E-Mail Address</label>
-  <input class="input" type="text" name="email"/><br>
-  <label class="label">Password</label>
-  <input class="input" type="password" name="password"/><br>
-  <label class="label">Confirm Password</label>
-  <input class="input" type="password" name="confirm-password"/><br>
-  <button class="button">Sign Up</button>
-</div>
+<form class="message is-light">
+  <div class="message-header">
+    <p>Sign Up</p>
+  </div>
+  <div class="message-body">
+    <form action="/add" method="POST">
+    <label class="label">Name</label>
+    <input class="input" type="text" name="username"/><br>
+    <label class="label">E-Mail Address</label>
+    <input class="input" type="text" name="email"/><br>
+    <label class="label">Password</label>
+    <input class="input" type="password" name="password"/><br>
+    <label class="label">Confirm Password</label>
+    <input class="input" type="password" name="confirm-password"/><br>
+    <button class="button">Sign Up</button>
+  </div>
+</form>
