--- a/login/views/error.ejs
+++ b/login/views/error.ejs
@@ -1,5 +1,10 @@
-<div class="message-body">
-  <h1><%= message %></h1>
-  <h2><%= error.status %></h2>
-  <pre><%= error.stack %></pre>
-</div>
+<form class="message is-light">
+  <div class="message-header">
+    <p>Error</p>
+  </div>
+  <div class="message-body">
+    <h1><%= message %></h1>
+    <h2><%= error.status %></h2>
+    <pre><%= error.stack %></pre>
+  </div>
+</form>
