--- a/login/views/signIn.ejs
+++ b/login/views/signIn.ejs
@@ -1,9 +1,15 @@
-<div class="message-body">
-  <!-- <form action="/login" method="GET"> -->
-  <label class="label">E-Mail Address</label>
-  <input class="input is-one-quarter" type="text" name="email"/><br>
-  <label class="label">Password</label>
-  <input class="input" type="password" name="password"/><br>
-  <button class="button">Sign In</button>
-  <a class="column is-centered" href="">Forget Your Password?</a>
-</div>
+<form class="message is-light">
+  <div class="message-header">
+    <p>Sign In</p>
+  </div>
+  <div class="message-body">
+    <form action="/sign-in" method="post">
+      <label class="label">E-Mail Address</label>
+      <input class="input is-one-quarter" type="text" name="email"/><br>
+      <label class="label">Password</label>
+      <input class="input" type="password" name="password"/><br>
+      <button class="button">Sign In</button>
+      <a class="column is-centered" href="">Forget Your Password?</a>
+    </form>
+  </div>
+</form>
