userモデルとuserビューを追加

--- a/login/views/layout.ejs
+++ b/login/views/layout.ejs
@@ -8,13 +8,13 @@
     <header>
       <nav class="navbar is-white" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
-          <a class="navbar-item" href="">Title</a>
+          <a class="navbar-item" href="/">Title</a>
         </div>
       
         <div class="navbar-menu">
           <div class="navbar-end">
             <a class="navbar-item" href="/sign-in">Sign In</a>
-            <a class="navbar-item" href="/sign-up">Sign Up</a>
+            <a class="navbar-item" href="/users/new">Sign Up</a>
           </div>
         </div>
       </nav>
