passport.jsを削除してsigninとsignupをuserに統合

--- a/login/views/users/login.ejs
+++ b/login/views/users/login.ejs
@@ -3,7 +3,7 @@
     <p>Sign In</p>
   </div>
   <div class="message-body">
-    <form action="/sign-in" method="post">
+    <form action="/users/login" method="POST">
       <label class="label">E-Mail Address</label>
       <input class="input is-one-quarter" type="text" name="email"/><br>
       <label class="label">Password</label>
