--- a/login/views/layout.ejs
+++ b/login/views/layout.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
     <title>title</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.8.0/css/bulma.min.css">
   </head>
@@ -8,13 +9,18 @@
     <header>
       <nav class="navbar is-white" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
-          <a class="navbar-item" href="/">Title</a>
+          <a class="navbar-item" href="/users">Title</a>
         </div>
-      
         <div class="navbar-menu">
           <div class="navbar-end">
-            <a class="navbar-item" href="/sign-in">Sign In</a>
+            <a class="navbar-item" href="/users/login">Sign In</a>
             <a class="navbar-item" href="/users/new">Sign Up</a>
+            <div class="navbar-item has-dropdown is-hoverable">
+              <a class="navbar-link">User</a>
+              <div class="navbar-dropdown">
+                <a class="navbar-item" href="/users/logout">Sign Out</a>
+              </div>
+            </div> 
           </div>
         </div>
       </nav>
