--- a/login/views/users/new.ejs
+++ b/login/views/users/new.ejs
@@ -3,15 +3,16 @@
     <p>Sign Up</p>
   </div>
   <div class="message-body">
-    <form action="/users/create" method="post">
-    <label class="label">Name</label>
-    <input class="input" type="text" name="username"/><br>
-    <label class="label">E-Mail Address</label>
-    <input class="input" type="text" name="email"/><br>
-    <label class="label">Password</label>
-    <input class="input" type="password" name="password"/><br>
-    <label class="label">Confirm Password</label>
-    <input class="input" type="password" name="confirm"/><br>
-    <button class="button">Sign Up</button>
+    <form action="/users/create" method="POST">
+      <label class="label">Name</label>
+      <input class="input" type="text" name="username"/><br>
+      <label class="label">E-Mail Address</label>
+      <input class="input" type="text" name="email"/><br>
+      <label class="label">Password</label>
+      <input class="input" type="password" name="password"/><br>
+      <label class="label">Confirm Password</label>
+      <input class="input" type="password" name="confirm"/><br>
+      <button class="button" type="submit">Sign Up</button>
+    </form>
   </div>
 </form>
