express-validatorを導入 HTMLのタグをformからdivに修正

--- a/login/views/index.ejs
+++ b/login/views/index.ejs
@@ -1,9 +1,8 @@
-<form class="message is-light">
+<div class="message is-light">
     <div class="message-header">
         <p>Home</p>
     </div>
     <div class="message-body">
         <p>Yay!!!</p>
     </div>
-</form>
-
+</div>
