--- a/login/views/users/login.ejs
+++ b/login/views/users/login.ejs
@@ -1,4 +1,4 @@
-<form class="message is-light">
+<div class="message is-light">
   <div class="message-header">
     <p>Sign In</p>
   </div>
@@ -12,4 +12,4 @@
       <a class="column is-centered" href="">Forget Your Password?</a>
     </form>
   </div>
-</form>
+</div>
