--- a/login/views/error.ejs
+++ b/login/views/error.ejs
@@ -1,4 +1,4 @@
-<form class="message is-light">
+<div class="message is-light">
   <div class="message-header">
     <p>Error</p>
   </div>
@@ -7,4 +7,4 @@
     <h2><%= error.status %></h2>
     <pre><%= error.stack %></pre>
   </div>
-</form>
+</div>
