--- a/login/views/users/new.ejs
+++ b/login/views/users/new.ejs
@@ -1,4 +1,4 @@
-<form class="message is-light">
+<div class="message is-light">
   <div class="message-header">
     <p>Sign Up</p>
   </div>
@@ -15,4 +15,4 @@
       <button class="button" type="submit">Sign Up</button>
     </form>
   </div>
-</form>
+</div>
