--- a/login/views/users/show.ejs
+++ b/login/views/users/show.ejs
@@ -1,8 +1,8 @@
-<form class="message is-light">
+<div class="message is-light">
   <div class="message-header">
     <p>User Data for <%= user.username %></p>
   </div>
   <div class="message-body">
     <p>Yay!!!</p>
   </div>
-</form>
+</div>
