コメント箇所を修正

--- a/login/views/layout.ejs
+++ b/login/views/layout.ejs
@@ -24,7 +24,7 @@
                   </div>
                 </div> 
               <%} else {%>
-                <a class="navbar-item" href="/users/login">Sign In</a>
+                <a class="navbar-item" href="/auth/login">Sign In</a>
                 <a class="navbar-item" href="/users/new">Sign Up</a>
               <% } %>
             </div>
