routesを追加してapp.jsから分割

--- a/login/views/layout.ejs
+++ b/login/views/layout.ejs
@@ -20,7 +20,7 @@
                 <div class="navbar-item has-dropdown is-hoverable">
                   <a class="navbar-link"><%= currentUser.username %></a>
                   <div class="navbar-dropdown">
-                    <a class="navbar-item" href="/users/logout">Sign Out</a>
+                    <a class="navbar-item" href="/auth/logout">Sign Out</a>
                   </div>
                 </div> 
               <%} else {%>
